--- a/public/css/products.css
+++ b/public/css/products.css
@@ -20,6 +20,15 @@ tfoot{
 	background: lightgray;
 }
 
+html, body {
+	max-width: 100%;
+	overflow-x: 
+}
+	
+div::-webkit-scrollbar{
+		display: none;
+}
+
 .size-color{
 	font-size: 14px;
 	color: red;
